# CCourse

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  changInfo.c  changeInfo.c  dataHepler.c  deleteInfo.c  gui.c  guiClass.c  guiClassInfoSearch.c  guiGrade.c  guiGradeInfoSearch.c  guiHelper.c  guiStatistic.c  guiStudent.c  guiStudentInfoSearch.c  head.h  informationIn.c  initInfo.c  main.c  run.sh  saveInfo.c  searchInfo.c  statistics.c  testInfo.c
data/: ClassInfo.txt  GradeInfo.txt  Mon Sep 12 Backup.txt  StudentInfo.txt  backup.txt  test.txt
src/: changeInfo.c  dataHepler.c  head.h  informationIn.c  initInfo.c  main.c  searchInfo.c  testInfo.c
src/gui/: guiClass.c  guiClassInfoSearch.c  guiGrade.c  guiGradeInfoSearch.c  guiHelper.c  guiInterface.c  guiStatistic.c  guiStudent.c  guiStudentInfoSearch.c
src/model/: changeInfo.c  dataHepler.c  deleteInfo.c  initInfo.c  inputInfo.c  saveInfo.c  searchInfo.c  sortInfo.c  statisticsInfo.c  testInfo.c
src/view/: guiClass.c  guiClassInfoSearch.c  guiClassInfoStatistic.c  guiGrade.c  guiGradeInfoSearch.c  guiGradeInfoStatistic.c  guiHelper.c  guiInterface.c  guiStudent.c  guiStudentInfoSearch.c  guiStudentInfoStatistic.c
